--- a/projectWarehouse/src/main/resources/templates/delete_buyer.html
+++ b/projectWarehouse/src/main/resources/templates/delete_buyer.html
@@ -71,7 +71,7 @@
     <div><h2>Sure you want to delete the account?</h2></div>
     <div class="field"><input type="text" name="login" id="login" th:value="${param.login}" />&nbsp Login</div>
     <div class="field"><input type="text" name="password" id="password" placeholder="Password" />&nbsp Password</div>
-    <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" th:value="${param.registrationNumber}" /></div>
+    <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" th:value="${param.registrationNumber}" />&nbsp Registration number</div>
     <div class="field"><button type="submit">Confirm</button></div>
   </form>
     <div style="text-align: center" th:text="${deleteMessage == true ? 'Your data has been deleted!' : ''}"></div>
