--- a/projectWarehouse/src/main/resources/templates/buyer_main_menu.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_main_menu.html
@@ -57,8 +57,8 @@
 <body>
 <div class="main_block">
   <div><h1>---Buyer main menu---</h1></div>
-  <div><a th:href="@{/create_buyer}" target="_blank"><h1>Create buyer</h1></a></div>
-  <div><a th:href="@{/find_buyer}" target="_blank"><h1>Edit buyer</h1></a></div>
+  <div><a th:href="@{/buyer_create}" target="_blank"><h1>Create buyer</h1></a></div>
+  <div><a th:href="@{/buyer_find}" target="_blank"><h1>Edit buyer</h1></a></div>
   <div><a th:href="@{/show_warehouses}" target="_blank"><h1>Warehouses</h1></a></div>
   <div><a href="/about_project" target="_blank"><h1>About project</h1></a></div>
 </div>
