--- a/projectWarehouse/src/main/resources/templates/buyer_create.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_create.html
@@ -57,7 +57,7 @@
 <body>
 <div class="main_block">
     <div><h1>Registration</h1></div>
-    <form method="get">
+    <form method="post">
         <div class="field_container">
             <div class="field"><input type="text" name="login" id="login" placeholder="Login" /></div>
             <div class="field"><input type="text" name="password" id="password" placeholder="Password" /></div>
