--- a/projectWarehouse/src/main/resources/templates/buyer_show_orders.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_show_orders.html
@@ -90,7 +90,7 @@
             <td th:text="${order.platesNumberLoading}"></td>
             <td th:text="${order.status}"></td>
             <td th:text="${order.comment}"></td>
-            <td><a th:href="@{/find_and_edit_order(orderId=${order.orderId})}" target="_blank">More</a></td>
+            <td><a th:href="@{/order_find(orderId=${order.orderId})}" target="_blank">More</a></td>
         </tr>
     </table>
 </div>
