--- a/projectWarehouse/src/main/resources/templates/order_create.html
+++ b/projectWarehouse/src/main/resources/templates/order_create.html
@@ -86,14 +86,15 @@
       <div class="field"><input type="text" name="comment" id="comment" placeholder="Comment" />&nbsp Comment</div>
       <div class="field"><input class="checkbox" type="checkbox" name="isUnloadingByWH" id="isUnloadingByWH" />&nbsp Unloading by WH</div>
       <div class="field"><input class="checkbox" type="checkbox" name="isLoadingByWH" id="isLoadingByWH" />&nbsp Loading by WH</div>
-      <div class="field"><button type="submit" onclick="createOrder()">Confirm</button></div>
+      <div class="field"><button type="submit" >Confirm</button></div>
+      <div class="field"><th th:switch="${createMessage}">
+        <div th:case="true">Order created!</div>
+        <div th:case="false">Error! Check provided data!</div>
+        <div th:case="null"></div>
+      </th></div>
+<!--      onclick="createOrder()"-->
     </div>
   </form>
-  <div class="field"><th th:switch="${createMessage}">
-    <div th:case="true">Order created!</div>
-    <div th:case="false">Error! Check provided data!</div>
-    <div th:case="null"></div>
-  </th></div>
 </div>
 </body>
 
@@ -125,7 +126,7 @@
     order.comment = comment;
 
     let xmlHttpRequest = new XMLHttpRequest();
-    xmlHttpRequest.open("get", "http://localhost:8080/create_order" +
+    xmlHttpRequest.open("get", "http://localhost:8080/order_create" +
             "/" + warehouseId +
             "/" + buyerId +
             "/" + totalSum +
@@ -138,7 +139,6 @@
             "/" + status +
             "/" + comment, true);
     xmlHttpRequest.setRequestHeader("Content-Type", "application/json; charset=utf8");
-    alert(JSON.stringify(order))
     xmlHttpRequest.send(JSON.stringify(order));
   }
 </script>
