--- a/projectWarehouse/src/main/resources/templates/warehouse_edit.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_edit.html
@@ -5,6 +5,8 @@
     <title>Profile details</title>
     <style>
         body {
+            display: grid;
+            grid-column: 3;
             background-color: black;
             color: white;
             font-family: monospace;
@@ -16,6 +18,7 @@
             font-weight: bold;
         }
         form {
+            grid-column: 3;
             font-family: monospace;
         }
         input::placeholder {
@@ -50,7 +53,9 @@
             color: white;
         }
         .main_block {
-            display: flex;
+            display: grid;
+            grid-column: 3;
+
             flex-direction: column;
             align-items: center;
             justify-content: center;
@@ -59,6 +64,8 @@
             display: block;
         }
         .field {
+            grid-column-start: 1;
+            grid-column-end: 1;
             display: flex;
             align-items: center;
             min-width: 40vw;
@@ -73,13 +80,6 @@
 <body>
 <div class="main_block">
     <div><h1>Edit WH details</h1></div>
-    <form method="get" th:if="${warehouse == null}">
-        <div class="field"><input type="text" name="providedRegistrationNumber" id="providedRegistrationNumber" placeholder="Registration number"/>&nbsp Registration number</div>
-        <div class="field"><input type="text" name="providedLogin" id="providedLogin" placeholder="Login"/>&nbsp Login</div>
-        <div class="field"><input type="text" name="providedPassword" id="providedPassword" placeholder="Password"/>&nbsp Password</div>
-        <div class="field"><button type="submit">Confirm</button></div>
-        <div class="field" style="display: inline; margin-right: 0%" th:text="${editMessage == false ? 'No data was found!' : ''}"></div>
-    </form>
     <form method="post">
         <div class="field_container" th:if="${warehouse != null}">
             <div class="field"><input type="text" name="entityTitle" id="entityTitle" th:value="${warehouse.entityTitle} == null ? '' : ${warehouse.entityTitle}" />&nbsp Entity title</div>
@@ -94,12 +94,13 @@
             <div class="field"><input type="text" name="status" id="status" th:value="${warehouse.status} == null ? '' : ${warehouse.status}" />&nbsp Status</div>
             <div class="field"><input type="text" name="login" id="login" th:value="${warehouse.login} == null ? '' : ${warehouse.login}" />&nbsp Login</div>
             <div class="field"><input type="text" name="password" id="password" th:value="${warehouse.password} == null ? '' : ${warehouse.password}" />&nbsp Password</div>
-            <div class="field"><input type="text" name="warehouseId" id="warehouseId" th:value="${warehouse.warehouseId} == null ? '' : ${warehouse.warehouseId}" />&nbsp Warehouse id</div>
+            <div class="field"><input type="text" name="warehouseId" id="warehouseId" readonly th:value="${warehouse.warehouseId} == null ? '' : ${warehouse.warehouseId}" />&nbsp Warehouse id</div>
             <div class="field"><input class="checkbox" type="checkbox" name="isTemperatureWH" id="isTemperatureWH" th:checked="${warehouse.isTemperatureWH}" />&nbsp Temperature WH</div>
             <div class="field"><input class="checkbox" type="checkbox" name="isCustomWH" id="isCustomWH" th:checked="${warehouse.isCustomWH}" />&nbsp Custom WH</div>
             <div class="field"><button type="submit">Confirm</button></div>
-            <div class="field"><a th:href="@{/delete_warehouse(login=${warehouse.login}, registrationNumber=${warehouse.registrationNumber})}" target="_blank">Delete my account</a></div>
-            <div class="field"><a th:href="@{/show_warehouse_orders(login=${warehouse.login}, registrationNumber=${warehouse.registrationNumber}, warehouseId=${warehouse.warehouseId})}" target="_blank">My orders</a></div>
+            <div class="field"><a th:href="@{/order_create(warehouseId=${warehouse.warehouseId})}" target="_blank">Create order</a></div>
+            <div class="field"><a th:href="@{/warehouse_orders_show(registrationNumber=${warehouse.registrationNumber}, warehouseId=${warehouse.warehouseId})}" target="_blank">My orders</a></div>
+            <div class="field"><a th:href="@{/warehouse_delete(registrationNumber=${warehouse.registrationNumber})}" target="_blank">Delete my account</a></div>
         </div>
     </form>
 </div>
