--- a/projectWarehouse/src/main/resources/templates/warehouse_main_menu.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_main_menu.html
@@ -57,8 +57,8 @@
 <body>
 <div class="main_block">
     <div><h1>---WH main menu---</h1></div>
-    <div><a th:href="@{/create_warehouse}" target="_blank"><h1>Create WH</h1></a></div>
-    <div><a th:href="@{/find_and_edit_warehouse}" target="_blank"><h1>Edit WH</h1></a></div>
+    <div><a th:href="@{/warehouse_create}" target="_blank"><h1>Register warehouse</h1></a></div>
+    <div><a th:href="@{/warehouse_find}" target="_blank"><h1>Log in</h1></a></div>
     <div><a href="/about_project" target="_blank"><h1>About project</h1></a></div>
 </div>
 </body>
