--- a/projectWarehouse/src/main/resources/templates/warehouse_delete.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_delete.html
@@ -69,7 +69,7 @@
     <div class="menu_item"><a th:href="@{/warehouse_main_menu}" target="_blank"><h1>Main menu</h1></a></div>
     <form method="get" th:if="${deleteMessage == null}">
         <div><h2>Sure you want to delete the account?</h2></div>
-        <div class="field"><input type="text" name="login" id="login" placeholder="Login" th:value="${param.login}" />&nbsp Login</div>
+        <div class="field"><input type="text" name="login" id="login" placeholder="Login" />&nbsp Login</div>
         <div class="field"><input type="text" name="password" id="password" placeholder="Password" />&nbsp Password</div>
         <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" placeholder="Registration number" th:value="${param.registrationNumber}" />&nbsp Registration number</div>
         <div class="field"><button type="submit">Confirm</button></div>
