--- a/projectWarehouse/src/main/resources/templates/warehouse_find.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_find.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Edition mode</title>
+  <title>Profile details</title>
   <style>
     body {
       background-color: black;
@@ -64,18 +64,21 @@
       min-width: 40vw;
       margin: 3%;
     }
+    .checkbox {
+      height: fit-content;
+      min-width: 1vw;
+    }
   </style>
 </head>
 <body>
 <div class="main_block">
-  <div><h1>Edit your profile data</h1></div>
-  <form method="post">
-    <div class="field"><input type="text" name="providedLogin" id="providedLogin" placeholder="Login"/>&nbsp Login</div>
-    <div class="field"><input type="text" name="providedPassword" id="providedPassword" placeholder="Password" />&nbsp Password</div>
-    <div class="field"><input type="text" name="providedRegistrationNumber" id="providedRegistrationNumber" placeholder="Registration number" />&nbsp Registration number</div>
+  <div><h1>Edit WH details</h1></div>
+  <form method="post" th:if="${warehouse == null}">
+    <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" placeholder="Registration number"/>&nbsp Registration number</div>
+    <div class="field"><input type="text" name="login" id="login" placeholder="Login"/>&nbsp Login</div>
+    <div class="field"><input type="text" name="password" id="password" placeholder="Password"/>&nbsp Password</div>
     <div class="field"><button type="submit">Confirm</button></div>
-    <div class="field" style="display: inline; margin-right: 0%" th:text="${editMessage == false ? 'No data was found!' : ''}"></div>
-    <div class="field" style="display: inline; margin-left: 0%" th:if="${editMessage == false}"><a th:href="@{/buyer_create}" target="_blank">Create account?</a></div>
+    <div class="field" style="display: inline; margin-right: 0%" th:text="${findMessage == false ? 'No data was found!' : ''}"></div>
   </form>
 </div>
 </body>
