--- a/projectWarehouse/src/main/resources/templates/warehouse_orders_show.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_orders_show.html
@@ -27,12 +27,16 @@
             border-width: 0.5px;
             border-style: dashed;
             border-color: white;
+            text-align: center;
+            padding: 3px 3px;
         }
         td {
             border-collapse: collapse;
             border-width: 0.5px;
             border-style: dashed;
             border-color: white;
+            text-align: center;
+            padding: 3px 3px;
         }
         a {
             text-decoration: none;
@@ -64,21 +68,21 @@
     </style>
 </head>
 <body>
-<div th:text="${orders != null ? 'y' : 'n'}"></div>
+<div th:text="${orders != null ? '' : 'No orders found!'}"></div>
 <div class="main_block" th:if="${orders != null}">
     <table>
         <tr>
-            <th>&nbsp Warehouse id &nbsp</th>
-            <th>&nbsp Total sum &nbsp</th>
-            <th>&nbsp Days keeping &nbsp</th>
-            <th>&nbsp Collis unloaded &nbsp</th>
-            <th>&nbsp Unloading by WH &nbsp</th>
-            <th>&nbsp Loading by WH &nbsp</th>
-            <th>&nbsp Plates unloading &nbsp</th>
-            <th>&nbsp Plates loading &nbsp</th>
-            <th>&nbsp Status &nbsp</th>
-            <th>&nbsp Comment &nbsp</th>
-            <th>&nbsp Edit &nbsp</th>
+            <th> Warehouse id </th>
+            <th> Total sum </th>
+            <th> Days keeping </th>
+            <th> Collis unloaded </th>
+            <th> Unloading by WH </th>
+            <th> Loading by WH </th>
+            <th> Plates unloading </th>
+            <th> Plates loading </th>
+            <th> Status </th>
+            <th> Comment </th>
+            <th> Edit </th>
         </tr>
         <tr th:each="order : ${orders}">
             <td th:text="${order.warehouseId}"></td>
@@ -91,7 +95,7 @@
             <td th:text="${order.platesNumberLoading}"></td>
             <td th:text="${order.status}"></td>
             <td th:text="${order.comment}"></td>
-            <td><a th:href="@{/find_and_edit_order(orderId=${order.orderId})}" target="_blank">More</a></td>
+            <td><a th:href="@{/order_find(orderId=${order.orderId})}" target="_blank">More</a></td>
         </tr>
     </table>
 </div>
